fixed text-alignment of notes to editor

--- a/src/Components/EditorAssignments/EditorAssignments.scss
+++ b/src/Components/EditorAssignments/EditorAssignments.scss
@@ -52,6 +52,10 @@
             .assignment-text-container {
                 margin: 0.25rem 0;
 
+                .assignment-notes {
+                    text-align: left;
+                }
+
                 .title {
                     color: $c-one;
                 }
